# hdu_jisuanjituxingxue

./: Bezier曲线.cpp  Bezier曲线细分程序设计报告.docx  多边形填充程序设计报告.docx  多边形转换.cpp
光线追踪/源程序/: CMakeLists.txt  RTdef.h  RThit.h  RTmaterial.h  camera.h  dielectric.hpp  diffuse.hpp  graph12-1-1.ppm.mbm  intersect.h  intersections.hpp  main.cpp  material.h  metal.hpp  ray.h  sphere.hpp
光线追踪/源程序/lvgm/: lv_precision.h  lvgm.h  opticsfunc.hpp  randfunc.hpp
光线追踪/源程序/lvgm/type_vec/: lv_vec2.h  lv_vec3.h  type_vec.h  vec_inout.h
